fix button move with scroll on ios

--- a/app/scss/pages/main.scss
+++ b/app/scss/pages/main.scss
@@ -6,6 +6,7 @@
     position: relative;
     display: flex;
     overflow: hidden;
+    transition: $ease-main;
     @media (max-width: 1024px) {
       //min-height: 780px;
     }
